--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@
 # in the templates via {{ site.myvariable }}.
 
 title: FEAScript Blog
-email: your-email@example.com
+email: nikoscham@gmail.com
 description: >-
-  Blog for FEAScript - a lightweight finite element simulation library 
+  FEAScript is a lightweight finite element simulation library 
   built in JavaScript for creating client-side, browser-based simulations
   for physics and engineering problems.
 baseurl: ""
 url: "https://blog.feascript.com"
-twitter_username: jekyllrb
+#twitter_username: jekyllrb
 github_username:  FEAScript
 
 # Build settings
