--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: FEAScript Blog
+author: Nikos Chamakos
 email: nikoscham@gmail.com
 description: >-
   FEAScript is a lightweight finite element simulation library 
