Update configuration and layout files; add YouTube username and hide RSS subscribe line

--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ description: >-
   for physics and engineering problems.
 baseurl: ""
 url: "https://blog.feascript.com"
-#twitter_username: jekyllrb
 github_username: FEAScript
+youtube_username: "@FEAScript"
 
 # Build settings
 theme: minima
